dnl -----------------------------------------------------------------------
dnl Stage Autoconf script
dnl $Id: configure.in,v 1.75 2005-08-09 05:10:26 rtv Exp $
dnl -----------------------------------------------------------------------

dnl AC_INIT( package, version )
AC_INIT(stage,2.0.0)

AC_CONFIG_SRCDIR(src/stage.c)

dnl determine system type.  this is used in a couple of places to infer the 
dnl types of arguments to some networking library functions.  if/when we 
dnl upgrade to newer Autotools, this can probably go away.
AC_CANONICAL_SYSTEM

dnl Initialize automake, requiring version 1.7 or better
AM_INIT_AUTOMAKE(1.7)

dnl Need AC_PROG_MAKE_SET for recursive building
AC_PROG_MAKE_SET

dnl Generate a configuration header called <config.h> and put all the C
dnl preprocessor defines in there
AC_CONFIG_HEADERS(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

dnl tell libtool to enable dynamic-loadable libraries
AC_LIBTOOL_DLOPEN
dnl enable libtool for building shared libraries in a platform-independent way
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

dnl Checks for header files of required libraries
AC_CHECK_HEADERS(stdint.h strings.h)

dnl build mplementations of these in libreplace.a if these are 
dnl missing
dnl AC_REPLACE_FUNCS(poll dirname scandir basename)
AC_REPLACE_FUNCS(dirname scandir basename)

dnl Do we have pkg-config?
AC_CHECK_PROG(have_pkg_config,pkg-config,yes,no)
if test "x$have_pkg_config" = "xno"; then
  AC_MSG_ERROR([pkg-config is required to build Stage.  Install pkg-config, then-reconfigure.])
fi

dnl add prefix to the pkg-config path in case things were installed there
dnl and the  user didn't add it manually
export PKG_CONFIG_PATH=$prefix/lib/pkgconfig:$PKG_CONFIG_PATH

dnl We need glib
PKG_CHECK_MODULES(GLIB, glib-2.0, have_glib=yes, have_glib=no)
if test "x$have_glib" = "xno"; then
  AC_MSG_ERROR([glib is required to build Stage.  Install glib, then re-configure.])
fi
dnl pkg-config is too clever by half: if glib.pc isn't found, it tries to run 
dnl glib-config, but interprets the resulting failure of exec as a success (!).
dnl So we'll double-check here by seeing if GLIB_LIBS is empty (actually, a single 
dnl space character).
if test "$GLIB_LIBS" = " "; then
  AC_MSG_ERROR([glib is required to build Stage.  Install glib, then re-configure.])
fi

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.0,
dnl PKG_CHECK_MODULES(GTK, libgnomecanvas-2.0 >= 2.0,
AC_DEFINE(INCLUDE_GTK,1,[building GTK components]),
AC_MSG_WARN([no suitable GTK was found. ])
)


dnl we need Player 1.6 or higher
PKG_CHECK_MODULES( PLAYER, player >= 1.6,
AC_DEFINE(INCLUDE_PLAYER,1,[building Player plugin]),
AC_MSG_WARN([Player was not found. ])
)

dnl we need libplayerc
PKG_CHECK_MODULES( PLAYERC, libplayerc >= 1.6,
AC_DEFINE(INCLUDE_LIBPLAYERC,1,[building test Player client]),
AC_MSG_WARN([libplayercr was not found. ])
)

dnl where's the X11-style color database?
AC_CHECK_FILE([/usr/X11R6/lib/X11/rgb.txt],
  CDB="\"/usr/X11R6/lib/X11/rgb.txt\"",
  AC_CHECK_FILE([/usr/openwin/lib/X11/rgb.txt],
    CDB="\"/usr/openwin/lib/X11/rgb.txt\"",
    CDB="\"/usr/X11R6/lib/X11/rgb.txt\""))
AC_ARG_WITH(color, [   --with-color=file      Location of X11-style color file],
CDB="\"$with_color\"",)
AC_DEFINE_UNQUOTED(COLOR_DATABASE,$CDB,[the X11-style color database])

AC_OUTPUT(Makefile 
          src/Makefile 
	  docsrc/Makefile
          worlds/Makefile 
          worlds/bitmaps/Makefile 
          replace/Makefile
	  stage.pc )

dnl should use AC_MSG_NOTICE(), but that's apparently not defined in
dnl autoconf 2.13.
AC_MSG_RESULT([])
AC_MSG_RESULT([*************************************************************])
AC_MSG_RESULT([])
AC_MSG_RESULT([Stage will be built for a $host system, with the following tools and options:])
AC_MSG_RESULT([  C   compiler: $CC $CFLAGS])
AC_MSG_RESULT([  C++ compiler: $CXX $CXXFLAGS])
AC_MSG_RESULT([])

AC_MSG_RESULT([Stage will be installed in:])
AC_MSG_RESULT([    $prefix/])
AC_MSG_RESULT([])
AC_MSG_RESULT([To see the configuration options, do:])
AC_MSG_RESULT([    ./configure --help])
AC_MSG_RESULT([])
AC_MSG_RESULT([When you're satisfied with the configuration, type 'make install'. ])
AC_MSG_RESULT([])
